# minrt

./: CMakeLists.txt
include/minrt/: minrt.hpp  numpy.hpp  utils.hpp
sample/: CMakeLists.txt  mnist.cpp  mnist_managed.cpp  mnist_mapped.cpp
src/: cli.cpp  minrt.cu
